# lhammai-cli

./: .default.env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: release.yml  test.yml
docs/: PYPI_README.md
src/lhammai_cli/: __init__.py  history.py  main.py  schemas.py  settings.py
src/lhammai_cli/utils/: __init__.py  llm_utils.py  logging.py  ui_utils.py
tests/: conftest.py  test_history.py  test_llm_utils.py  test_main.py  test_settings.py
