[project]
name = "lhammai-cli"
version = "0.1.0"
description = "Interact with any LLM from your terminal"
readme = "README.md"
authors = [
    { name = "Dimitris Poulopoulos", email = "dimitris.a.poulopoulos@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
lhammai-cli = "lhammai_cli:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
